[FEAT]: update fake payment data for associated jobs
