# src/database/models/associatedJob.js
@@ -16,7 +16,20 @@ export default function (sequelize) {
     description: {
       type: DataTypes.STRING(140),
       allowNull: false,
-    }
+    },
+    // TODO: Normalize out into monthly payment data per associated Job
+    payment1: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+    },
+    payment2: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+    },
+    payment3: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+    },
   }, {
     modelName: 'associatedJob',
     sequelize,
